reduced dependencies (#20)