@@ -30,9 +30,9 @@
 		<microprofile.version>6.0</microprofile.version>
 
 		<!-- Imixs Workflow -->
-		<org.imixs.workflow.version>6.2.4</org.imixs.workflow.version>
+		<org.imixs.workflow.version>6.2.7-SNAPSHOT</org.imixs.workflow.version>
 		<org.imixs.data.version>1.0.1</org.imixs.data.version>
-		<org.imixs.office.version>5.1.5</org.imixs.office.version>
+		<org.imixs.office.version>5.1.8-SNAPSHOT</org.imixs.office.version>
 		<org.imixs.marty.version>5.1.0</org.imixs.marty.version>
 		<org.imixs.adapter.version>3.2.1</org.imixs.adapter.version>
 		<org.imixs.archive.version>3.1.3</org.imixs.archive.version>
@@ -49,6 +49,8 @@
 		<junit.jupiter.version>5.9.2</junit.jupiter.version>
 		<mockito.version>5.8.0</mockito.version>
 		<org.imixs.mock.version>6.1.0</org.imixs.mock.version>
+
+		<custom.webResources>src/main/webapp</custom.webResources>
 		<imixs-office.applicationname>${rootArtifactId}</imixs-office.applicationname>
 
 		<!-- Environment Settings -->
@@ -129,19 +131,35 @@
 				</configuration>
 			</plugin>
 
-			<!-- Testing JUnit 5 -->
+			<!-- issue #572  
+			 	hack for:
+			https://stackoverflow.com/questions/75116023/unable-to-make-protected-final-java-lang-class-java-lang-classloader-defineclass
+			 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.3.1</version>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<argLine>
+								--add-opens java.base/java.lang=ALL-UNNAMED
+							</argLine>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.3.1</version>
+				<version>3.2.0</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<webResources>
@@ -155,8 +173,11 @@
 							</includes>
 						</resource>
 					</webResources>
+
+					<!-- We exclude libs form the parent WAR artifact 
+					<workDirectory>target/overlay-war-folder</workDirectory>
+				
 					<overlays>
-						<!-- Exclude libs from overlay project -->
 						<overlay>
 							<groupId>org.imixs.workflow</groupId>
 							<artifactId>imixs-office-workflow-app</artifactId>
@@ -165,6 +186,7 @@
 							</excludes>
 						</overlay>
 					</overlays>
+					-->
 				</configuration>
 			</plugin>
 
@@ -233,49 +255,6 @@
 		</dependency>
 
 
-		<!-- Imixs Workflow -->
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-workflow-core</artifactId>
-			<type>jar</type>
-			<version>${org.imixs.workflow.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-workflow-engine</artifactId>
-			<type>jar</type>
-			<version>${org.imixs.workflow.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-workflow-jax-rs</artifactId>
-			<type>jar</type>
-			<version>${org.imixs.workflow.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-workflow-faces</artifactId>
-			<type>jar</type>
-			<version>${org.imixs.workflow.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-workflow-index-lucene</artifactId>
-			<version>${org.imixs.workflow.version}</version>
-		</dependency>
-		<!-- Imixs-Archive -->
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-archive-api</artifactId>
-			<version>${org.imixs.archive.version}</version>
-		</dependency>
-		<!-- Marty -->
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-marty</artifactId>
-			<version>${org.imixs.marty.version}</version>
-		</dependency>
-
 		<!-- Imixs-Office-Workflow Overlay -->
 		<dependency>
 			<groupId>org.imixs.workflow</groupId>
@@ -289,34 +268,7 @@
 			<version>${org.imixs.office.version}</version>
 		</dependency>
 
-		<!-- Imixs Data -->
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-data-groups</artifactId>
-			<version>${org.imixs.data.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-data-views</artifactId>
-			<version>${org.imixs.data.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-data-documents</artifactId>
-			<version>${org.imixs.data.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-data-importer</artifactId>
-			<version>${org.imixs.data.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>${apache.pdfbox.version}</version>
-		</dependency>
-
-		<!-- Optional Adapter Libaries 
+		<!-- Wopi 
 		<dependency>
 			<groupId>org.imixs.workflow</groupId>
 			<artifactId>imixs-adapters-wopi</artifactId>
@@ -328,24 +280,9 @@
 			<version>${org.imixs.adapter.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-adapters-sepa</artifactId>
-			<version>${org.imixs.adapter.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-adapters-datev</artifactId>
-			<version>${org.imixs.adapter.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-adapters-poi</artifactId>
-			<version>${org.imixs.adapter.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.saxon</groupId>
-			<artifactId>Saxon-HE</artifactId>
-			<version>${net.sf.saxon.version}</version>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>${apache.pdfbox.version}</version>
 		</dependency>
 		-->
 
@@ -398,12 +335,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Imixs Mock -->
-		<dependency>
-			<groupId>org.imixs.workflow</groupId>
-			<artifactId>imixs-mock</artifactId>
-			<version>${org.imixs.mock.version}</version>
-			<scope>test</scope>
-		</dependency>
+
 	</dependencies>
-</project>	
+</project>
